module(
    name = "brpc",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "leveldb", version = "")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "openssl", version = "")
bazel_dep(name = "zlib", version = "1.2.13")
bazel_dep(name = "glog", version = "0.5.0")
bazel_dep(name = "thrift", version = "")
